# bus-protocol-learning

./: .gitignore  Cargo.toml  README.md  plot-dump.py
src/: common.rs  filters.rs  hex.rs  main.rs  validate.rs
src/filters/: common_scale.rs  constants.rs  linear_growth.rs  local_min_max.rs  monotonic_change.rs  oscillating_sensor.rs  require_in_range.rs  require_spread.rs  strip_bus_initialization.rs
thesis/: model3-test.tex
