[package]
name = "master"
version = "0.1.0"
authors = ["Jakob Löw <jakob@m4gnus.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
